# femtoFS

./: CMakeLists.txt  CoC.md  Makefile  README.md  specification.md
include/: isPrime.h
misc/: list
programs/: Makefile  experimentPrimes.cpp  femtofsSim.cpp  perf-isPrime.cpp  searchfj32.cpp  zerofsSim.cpp
units/: CMakeLists.txt  test-isPrime.cpp
